--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,12 @@
 {
     "presets": [
-        "@babel/preset-env"
+        [
+            "@babel/preset-env",
+            // only include the usage polyfills.
+            {
+                "useBuiltIns": "usage"
+            }
+        ]
     ],
     "plugins": []
 }
