--- a/package.json
+++ b/package.json
@@ -19,13 +19,14 @@
     "@babel/preset-env": "^7.1.6",
     "babel-loader": "^8.0.4",
     "clean-webpack-plugin": "^0.1.19",
+    "copy-webpack-plugin": "^4.0.0",
     "css-loader": "^0.28.11",
     "csv-loader": "^2.1.1",
     "file-loader": "^0.11.2",
     "html-webpack-plugin": "^2.29.0",
     "style-loader": "^0.18.2",
-    "webpack": "^3.12.0",
-    "webpack-dev-server": "^2.11.3",
+    "webpack": "^3.0.0",
+    "webpack-dev-server": "^2.0.0",
     "xml-loader": "^1.2.1"
   },
   "dependencies": {
