feat: refine async module example

--- a/packages/module-host-demo/package.json
+++ b/packages/module-host-demo/package.json
@@ -13,5 +13,8 @@
   "license": "ISC",
   "dependencies": {
     "async-dep-module-demo": "file:../async-dep-module-demo"
+  },
+  "devDependencies": {
+    "webpack-bundle-analyzer": "^3.6.0"
   }
 }
