--- a/packages/async-dep-module-demo/package.json
+++ b/packages/async-dep-module-demo/package.json
@@ -2,7 +2,7 @@
   "name": "async-dep-module-demo",
   "version": "1.0.0",
   "description": "",
-  "main": "dist/module.umd.js",
+  "main": "dist/demo.umd.js",
   "module": "dist-esm/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
