--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "rollup-plugin-terser": "^5.2.0",
     "style-loader": "^0.18.2",
     "webpack": "^4.41.5",
+    "webpack-bundle-analyzer": "^3.6.0",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.10.1",
     "wepack": "^0.0.1",
