feat: add tree search algo

--- a/packages/playground/package.json
+++ b/packages/playground/package.json
@@ -28,5 +28,8 @@
   },
   "bugs": {
     "url": "https://github.com/ostinatos/js-playground/issues"
+  },
+  "dependencies": {
+    "uuid": "^8.2.0"
   }
 }
