feat: add optional chaining demo

--- a/packages/playground/package.json
+++ b/packages/playground/package.json
@@ -31,5 +31,8 @@
   },
   "dependencies": {
     "uuid": "^8.2.0"
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-optional-chaining": "^7.11.0"
   }
 }
