--- a/packages/playground/.babelrc
+++ b/packages/playground/.babelrc
@@ -1,12 +1,12 @@
 {
-    "presets": [
-        [
-            "@babel/preset-env",
-            // only include the usage polyfills.
-            {
-                "useBuiltIns": "usage"
-            }
-        ]
-    ],
-    "plugins": []
+  "presets": [
+    [
+      "@babel/preset-env",
+      // only include the usage polyfills.
+      {
+        "useBuiltIns": "usage"
+      }
+    ]
+  ],
+  "plugins": ["@babel/plugin-proposal-optional-chaining"]
 }
