feat: topo sort

--- a/packages/playground/package.json
+++ b/packages/playground/package.json
@@ -30,6 +30,7 @@
     "url": "https://github.com/ostinatos/js-playground/issues"
   },
   "dependencies": {
+    "collections": "^5.1.12",
     "uuid": "^8.2.0"
   },
   "devDependencies": {
