--- a/package.json
+++ b/package.json
@@ -4,39 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "serve": "lerna exec yarn serve --scope playground"
+    "dev": "lerna exec yarn dev --scope playground"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "@babel/core": "^7.1.6",
-    "@babel/plugin-syntax-async-generators": "^7.0.0",
-    "@babel/plugin-transform-async-to-generator": "^7.1.0",
-    "@babel/preset-env": "^7.1.6",
-    "babel-loader": "^8.0.4",
-    "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^4.0.0",
-    "css-loader": "^0.28.11",
-    "csv-loader": "^2.1.1",
-    "file-loader": "^0.11.2",
-    "html-webpack-plugin": "^3.2.0",
-    "lerna": "^3.20.2",
-    "rollup": "^1.29.1",
-    "rollup-plugin-terser": "^5.2.0",
-    "style-loader": "^0.18.2",
-    "webpack": "^4.41.5",
-    "webpack-bundle-analyzer": "^3.6.0",
-    "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.10.1",
-    "wepack": "^0.0.1",
-    "xml-loader": "^1.2.1"
-  },
-  "dependencies": {
-    "async-dep-module-demo": "file:packages/async-dep-module-demo",
-    "module-host-demo": "file:packages/module-host-demo",
-    "playground": "file:packages/playground"
-  },
+  "devDependencies": {},
+  "dependencies": {},
   "private": true,
   "workspaces": [
     "packages/*"
