--- a/package.json
+++ b/package.json
@@ -1,18 +1,27 @@
 {
-  "name": "js-playground",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "dev": "lerna exec yarn dev --scope playground"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {},
-  "dependencies": {},
-  "private": true,
-  "workspaces": [
-    "packages/*"
-  ]
+    "name": "js-playground",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "dev": "lerna exec yarn dev --scope playground",
+        "lint": "eslint packages/* --fix"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "devDependencies": {
+        "@typescript-eslint/eslint-plugin": "^5.3.0",
+        "@typescript-eslint/parser": "^5.3.0",
+        "eslint": "^8.2.0",
+        "eslint-config-prettier": "^8.3.0",
+        "eslint-plugin-prettier": "^4.0.0",
+        "prettier": "^2.4.1",
+        "typescript": "^4.3.2"
+    },
+    "dependencies": {},
+    "private": true,
+    "workspaces": [
+        "packages/*"
+    ]
 }
